# dbus-notifyd-rust

./: Cargo.toml  README.md  config.toml  dbus-notifyd_command.sh  theme.css
src/: main.rs
