[package]
name = "dbus-test"
version = "1.0.2"
authors = ["ekloeckner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.7.1"
serde = "1.0.102"
serde_derive = "1.0.102"
toml = "0.5.5"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.gdk]
version = "^0"

[dependencies.glib]
version = "^0"
